--- a/app/scss/_aboutDomira.scss
+++ b/app/scss/_aboutDomira.scss
@@ -59,7 +59,12 @@
 		background-size: cover;
 		background-attachment: fixed;
 	}
+}
 
-	
-
+@media screen and(max-width: 991px){
+    .item{
+        iframe{
+        text-align: center;
+        }
+    }
 }
