--- a/app/scss/_newsAndSales.scss
+++ b/app/scss/_newsAndSales.scss
@@ -20,6 +20,10 @@
 		border-radius: 16px;
 		float: right;
 		margin: 10px 10px 0;
+        &:hover{
+             background-color: rgb(109, 182, 220);
+	         color: #fff;
+        }
 	}
 	.col-50 {
 		width: 50%;
@@ -43,7 +47,44 @@
 			a {
 				color: $mainBlueColor;
 				font-size: 20px;
-			}
+                display: inline-block;
+                position: relative;
+                text-decoration: none;
+
+                   
+                }
+                a:before {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    left: 0;
+                    bottom: 0;
+                    height: 2px;
+                    width: 0;
+                    transition: width 0s ease, background .5s ease;
+                }
+                a:after {
+                    content: '';
+                    display: block;
+                    position: absolute;
+                    right: 0;
+                    bottom: 0;
+                    height: 2px;
+                    width: 0;
+                    background: $mainBlueColor;
+                    transition: width .5s ease;
+                }
+                a:hover:before {
+                    width: 100%;
+                    background: $mainBlueColor;
+                    transition: width .5s ease;
+                }
+                a:hover:after {
+                    width: 100%;
+                    background: transparent;
+                    transition: all 0s ease;
+                }
+			
 		}
 		.date {
 			color: #989b9c;
