--- a/app/css/style.css
+++ b/app/css/style.css
@@ -344,7 +344,8 @@ header .hidden {
   background-color: rgba(255, 255, 255, 0.9);
   min-width: 100%;
   transition: all .2s;
-  padding: 10px 0;
+  width: auto;
+  padding: 10px;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
