--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -98,7 +98,8 @@ header .hidden {
 	background-color: rgba(255, 255, 255, 0.9);
 	min-width: 100%;
 	transition: all .2s;
-	padding: 10px 0;
+	width: auto;
+	padding: 10px;
 	flex-direction: column;
 	align-items: flex-start;
 	display: none;
