--- a/app/scss/_top-main.scss
+++ b/app/scss/_top-main.scss
@@ -98,19 +98,25 @@
         width: 30px;
         height: 40px;
         margin: 5px auto;
-        background-color: #0070ae;
+        background-color: #fff;
+        color: #0070ae;
         background-position: center center;
         background-repeat: no-repeat;
         &:hover{
           cursor: pointer;
-          background-color: darken(#0070ae, 3%);
+          background-color: #0070ae;
+          color: #fff;
         }
       }
-      .up{
-        background-image: url('../img/nav-up.png');
-      }
-      .down{
-        background-image: url('../img/nav-down.png');
+      .up, .down{
+        position: relative;
+        div {
+          font-size: 15px;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%) scale(0.9, 0.5);
+        }
       }
     }
   }
