--- a/app/scss/_newsDomira.scss
+++ b/app/scss/_newsDomira.scss
@@ -7,7 +7,6 @@
 	color: #0080c6;
 	line-height: 21px;
 	font-size: 17px;
-	height: 50px;
 	display: block;
 }
 
@@ -54,7 +53,6 @@
 
 .container .grid_items .item .item_content_wrapper .box {
   overflow: hidden;
-  height: 40px;
   width: auto;
 }
 
@@ -67,5 +65,21 @@
   -webkit-column-width: auto;
   -moz-column-width: auto;
   column-width: auto;
-  height: 100%;
+}
+
+.grid_items .item_image_wrapper {
+	display: inline-block;
+	height: 200px;
+	width: 100%;
+}
+
+.grid_items .item_image_wrapper img {
+	max-width: 100%;
+	max-height: 100%;
+	margin: 0 auto;
+}
+
+.grid_items .row {
+	display: flex;
+	flex-wrap: wrap;
 }
