--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1092,12 +1092,14 @@ header .drop:hover .hidden {
 .grid_items .item_image_wrapper {
   display: inline-block;
   height: 200px;
-  width: 100%; }
+  width: 100%;
+  text-align: center; }
 
 .grid_items .item_image_wrapper img {
   max-width: 100%;
   max-height: 100%;
-  margin: 0 auto; }
+  margin: 0 auto;
+  width: auto; }
 
 .grid_items .row {
   display: -webkit-box;
@@ -1182,12 +1184,15 @@ header .drop:hover .hidden {
   margin-bottom: 45px; }
 
 .page_text .container .main_content_text .text_content:first-child .page-title h2 {
-  margin-bottom: 70px;
+  margin-bottom: 13px;
   font-size: 40px; }
 
 .page_text .container .main_content_text .text_content:last-child .page_text_content {
   border-bottom: none;
   margin-bottom: 0; }
+
+.page_text iframe {
+  width: 100%; }
 
 @media screen and (max-width: 996px) {
   .page_text .main_content_img {
@@ -1386,6 +1391,7 @@ main .wrapper .container .layout .page-title h3 {
     height: 500px;
     min-height: 100vh; }
   .main-bottom-map-wrapper .main-bottom-map-info-block {
+    width: 400px;
     border-radius: 2px;
     background-color: rgba(0, 128, 198, 0.95);
     padding: 45px 175px 45px 45px;
@@ -1481,6 +1487,7 @@ main .wrapper .container .layout .page-title h3 {
 
 @media (max-width: 768px) {
   .main-bottom-map-wrapper .main-bottom-map-info-block {
+    width: auto;
     top: 0;
     right: 0;
     -webkit-transform: none;
@@ -1488,8 +1495,20 @@ main .wrapper .container .layout .page-title h3 {
 
 @media (max-width: 520px) {
   .main-bottom-map-wrapper .main-bottom-map-info-block {
+    width: auto;
     position: relative;
     padding: 20px; } }
+
+.lightning-for-marker {
+  position: absolute;
+  top: 49%;
+  left: 49%;
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+  -webkit-transform: trnslate(-50%, -50%);
+          transform: trnslate(-50%, -50%);
+  box-shadow: inset 0 0 10px 1px rgba(0, 128, 198, 0.5), 0 0 5px 0 rgba(0, 128, 198, 0.5); }
 
 .banner-container::after {
   display: table;
@@ -1529,6 +1548,8 @@ main .wrapper .container .layout .page-title h3 {
       -webkit-transform: translateY(-50%);
               transform: translateY(-50%);
       z-index: 0; }
+    .banner-container .jk-list .jk-list-item.active {
+      box-shadow: inset 0 0 20px 3px rgba(0, 128, 198, 0.5); }
     .banner-container .jk-list .jk-list-item .jk-list-item-content {
       display: inline-block;
       position: absolute;
@@ -1705,7 +1726,10 @@ main .wrapper .container .layout .page-title h3 {
   .news-and-sales .news-item:not(:last-of-type) td {
     border-bottom: dotted 2px #eee; }
   .news-and-sales .sales h3 {
-    color: #fff; }
+    color: #fff;
+    margin-bottom: 20px; }
+  .news-and-sales .sales hr {
+    margin-bottom: 50px; }
   .news-and-sales .sales .arrow-prev, .news-and-sales .sales .arrow-next {
     float: right;
     color: #0072b0;
@@ -1724,7 +1748,7 @@ main .wrapper .container .layout .page-title h3 {
     text-transform: uppercase;
     text-decoration: none; }
   .news-and-sales .sales .sales-item {
-    margin-top: 30px; }
+    margin-bottom: 30px; }
     .news-and-sales .sales .sales-item img {
       width: 100%; }
     .news-and-sales .sales .sales-item p {
