--- a/app/scss/_newsDomira.scss
+++ b/app/scss/_newsDomira.scss
@@ -71,12 +71,14 @@
 	display: inline-block;
 	height: 200px;
 	width: 100%;
+	text-align: center;
 }
 
 .grid_items .item_image_wrapper img {
 	max-width: 100%;
 	max-height: 100%;
 	margin: 0 auto;
+	width: auto;
 }
 
 .grid_items .row {
