--- a/app/scss/_top-main.scss
+++ b/app/scss/_top-main.scss
@@ -1,3 +1,14 @@
+.lightning-for-marker {
+  position: absolute;
+  top: 49%;
+  left: 49%;
+  width: 70px;
+  height: 70px;
+  border-radius: 35px;
+  transform: trnslate(-50%, -50%);
+  box-shadow: inset 0 0 10px 1px rgba(#0080c6, 0.5), 0 0 5px 0 rgba(#0080c6, 0.5)
+}
+
 .banner-container {
   &::after{
     display: table;
@@ -37,6 +48,9 @@
         left: 0;
         transform: translateY(-50%);
         z-index: 0;
+      }
+      &.active {
+        box-shadow: inset 0 0 20px 3px rgba(#0080c6, 0.5)
       }
       .jk-list-item-content{
         display: inline-block;
